--- a/huntingList.html
+++ b/huntingList.html
@@ -50,11 +50,12 @@
           <button class="btn" onclick="filterSelection('stage1')">Stage 1 Pokémon</button>
           <button class="btn" onclick="filterSelection('stage2')">Stage 2 Pokémon</button>
           <button class="btn" onclick="filterSelection('pEX')">Pokémon EX</button>
+          <button class="btn" onclick="filterSelection('pGX')">Pokémon GX</button>
           <button class="btn" onclick="filterSelection('pMEGA')">MEGA Pokémon</button>
+          <br>
           <button class="btn" onclick="filterSelection('pV')">Pokémon V</button>
           <button class="btn" onclick="filterSelection('pVMax')">Pokémon VMAX</button>
           <button class="btn" onclick="filterSelection('pVStar')">Pokémon VSTAR</button>
-          <br>
           <button class="btn" onclick="filterSelection('pex')">Pokémon ex</button>
           <button class="btn" onclick="filterSelection('item')">Item</button>
           <button class="btn" onclick="filterSelection('tool')">Pokémon Tool</button>
