--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
             night.
           </p>
           <p>
-            I currently work at Varicent and testing the Sales Performance
+            I currently work at Varicent and test the Sales Performance
             Management. I am foucs on testing and delivering hot-fixes for
             escalations and platinum client issues. I also write my own Python
             scripts to test RestAPI during work.
@@ -94,8 +94,8 @@
           <p>
             I earned my Bachelor's Degree in Computational Mathematics and
             Statistics with Computing minor from the University of Waterloo in
-            2021. Prior to that, I was born in Hong Kong and lived there for
-            almost 18 years.
+            2021. Before I came to Canada, I was born in Hong Kong and lived
+            there for almost 18 years.
           </p>
           <p>
             Aside from doing maths and coding, you will often see me playing
