--- a/projects/rdtProtocol.html
+++ b/projects/rdtProtocol.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Shallow Water Animation | Calvin Vert Li</title>
+    <title>RDT Protocol | Calvin Vert Li</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
