--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: October 5nd, 2024 at 02:34 AM
+        Last-Updated: November 17th, 2024 at 02:06 AM
       </p>
       <div id="card-gallery"></div>
     </div>
