--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: November 18th, 2024 at 09:33 PM
+        Last-Updated: December 03rd, 2024 at 03:16 PM
       </p>
       <div id="card-gallery"></div>
     </div>
