--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: December 03rd, 2024 at 03:16 PM
+        Last-Updated: February 03rd, 2025 at 00:18
       </p>
       <div id="card-gallery"></div>
     </div>
