--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: February 03rd, 2025 at 00:18
+        Last-Updated: February 18th, 2025 at 14:24
       </p>
       <div id="card-gallery"></div>
     </div>
