--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: April 02nd, 2025 at 22:31
+        Last-Updated: April 10th, 2025 at 10:22
       </p>
       <div id="card-gallery"></div>
     </div>
