--- a/games/colourScheme.html
+++ b/games/colourScheme.html
@@ -88,6 +88,13 @@
       <section id="gameSection" class="text-center">
         <canvas id="gameCanvas"></canvas>
       </section>
+      <h6 class="display-6">How to Play</h6>
+      <p>
+        Click on a square and it will change its colour.<br />
+        In addition, the square will change the colour of its adjacent squares
+        too.<br />
+        The goal is to make all squares the same colour.
+      </p>
     </div>
     <footer class="footer mt-auto text-center">
       <div class="container">
