--- a/games/colourScheme.html
+++ b/games/colourScheme.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>| Calvin Vert Li</title>
+    <title>Colour Scheme | Calvin Vert Li</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -90,10 +90,10 @@
       </section>
       <h6 class="display-6">How to Play</h6>
       <p>
-        Click on a square and it will change its colour.<br />
-        In addition, the square will change the colour of its adjacent squares
-        too.<br />
-        The goal is to make all squares the same colour.
+        Click on a rectangle and it will change its colour.<br />
+        In addition, the rectangle will change the colour of its adjacent
+        rectangles too.<br />
+        The goal is to make all rectangles the same colour.
       </p>
     </div>
     <footer class="footer mt-auto text-center">
