--- a/games/colourScheme.html
+++ b/games/colourScheme.html
@@ -90,10 +90,10 @@
       </section>
       <h6 class="display-6">How to Play</h6>
       <p>
-        Click on a rectangle and it will change its colour.<br />
-        In addition, the rectangle will change the colour of its adjacent
-        rectangles too.<br />
-        The goal is to make all rectangles the same colour.
+        Click on a gird and it will change its colour.<br />
+        In addition, the gird will change the colour of its adjacent neighbours
+        too.<br />
+        The goal is to make all girds the same colour.
       </p>
     </div>
     <footer class="footer mt-auto text-center">
