--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: May 06th, 2025 at 00:11
+        Last-Updated: June 21st, 2025 at 23:12
       </p>
       <div id="card-gallery"></div>
     </div>
