updated event list

--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: June 21st, 2025 at 23:12
+        Last-Updated: June 20th, 2025 at 15:00
       </p>
       <div id="card-gallery"></div>
     </div>
