--- a/pokemonEventList.html
+++ b/pokemonEventList.html
@@ -86,7 +86,7 @@
           >Pokémon Event Locator website</a
         >.
         <br />
-        Last-Updated: July 11th, 2025 at 00:24
+        Last-Updated: <span id="last-update"></span>
       </p>
       <div id="card-gallery"></div>
     </div>
